add perf_hooks to browser field of package.json

--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
         "buffer": false,
         "@microsoft/typescript-etw": false,
         "source-map-support": false,
-        "inspector": false
+        "inspector": false,
+        "perf_hooks": false
     },
     "volta": {
         "node": "14.15.5"
